syntax = "proto3";

service grpcSpeech {
    rpc DetermineSpeech(SpeechRequest) returns(SpeechResponse) {}
    rpc CreateVariant(SpeechRequest) returns(SpeechResponse) {}
}

message SpeechRequest {
    string Message = 1;
}

message SpeechResponse {
    int32 Duration = 1; // miliseconds
    string Message = 2;
}
