syntax = "proto3";

package grpcAccount;

service grpcAccount {
    rpc RetrieveFromId(AccountRequest) returns(Account) {}
    rpc UpdateAccount(Account) returns(SuccessResponse) {}
    rpc CreateAccount(Account) returns(SuccessResponse) {}
}

message Account {
    int32 Type        =  1;
    int32 AccessLevel = 2;
    string Name     = 3;
    string ID       = 4;
}

message AccountRequest {
    string ID       = 1;
    int32 Type      =2;
}

message SuccessResponse {
    bool Success = 1;
}
